Get resId value of an attribute from module’s styleable array if there is no explicit attribute entry.
Summary:
This applies for attributes which come from android sdk.

Correct Output
```
    public static int[] AlertDialog={ 0x010100f2,0x07f01074,0x07f010b3,0x07f010b4,0x07f010c0,0x07f010df };
    public static int AlertDialog_android_layout=0;
    public static int AlertDialog_buttonPanelSideLayout=1;
    public static int AlertDialog_listItemLayout=2;
    public static int AlertDialog_listLayout=3;
    public static int AlertDialog_multiChoiceItemLayout=4;
    public static int AlertDialog_singleChoiceItemLayout=5;
```

Previous Output
```
    public static int[] AlertDialog={ 0,0x07f01074,0x07f010b3,0x07f010b4,0x07f010c0,0x07f010df };
    public static int AlertDialog_android_layout=0;
    public static int AlertDialog_buttonPanelSideLayout=1;
    public static int AlertDialog_listItemLayout=2;
    public static int AlertDialog_listLayout=3;
    public static int AlertDialog_multiChoiceItemLayout=4;
    public static int AlertDialog_singleChoiceItemLayout=5;
```

Closes https://github.com/facebook/buck/pull/1159

Test Plan: GitHub

Reviewed By: Coneko

fbshipit-source-id: 02a0d70